--- a/contactanos.html
+++ b/contactanos.html
@@ -77,7 +77,7 @@
            
             <h1 class="container mt-5 text-center">CONTACTO INTESLA</h1>
             <hr class="subra">
-            <div class="contactos-intesla-contenedor" footer>
+            <div class="contactos-intesla-contenedor" bg-page>
             <div class="contenedor-contactanos ">
                 <div class="contenedor-contactanos-item ">
                     <i class="far fa-envelope fa-3x"></i>
@@ -139,9 +139,8 @@
         </form>
     </section>
 
-   
 <!-- PIE DE PAGINA -->
-<footer class="  text-white  mt-5 p-4 " footer>
+<footer class="  text-white  mt-5 p-4 " bg-page>
     <div class="container d-flex flex-wrap justify-content-between">
   
         <div class="w-30" >
@@ -195,6 +194,7 @@
         </div>
     
   </footer>
+  
 
 <script src="js/script.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
