--- a/cursos.html
+++ b/cursos.html
@@ -86,9 +86,8 @@
 	</div>   
     </article>  
 </section>
-
 <!-- PIE DE PAGINA -->
-<footer class="  text-white  mt-5 p-4 " footer>
+<footer class="  text-white  mt-5 p-4 " bg-page>
     <div class="container d-flex flex-wrap justify-content-between">
   
         <div class="w-30" >
@@ -142,7 +141,7 @@
         </div>
     
   </footer>
-
+  
    
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
