--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
 </section>
 
 <!-- PIE DE PAGINA -->
-<footer class="  text-white  mt-5 p-4 " footer>
+<footer class="  text-white  mt-5 p-4 " bg-page>
   <div class="container d-flex flex-wrap justify-content-between">
 
       <div class="w-30" >
