--- a/proyectos.html
+++ b/proyectos.html
@@ -138,7 +138,7 @@
 
 
 <!-- PIE DE PAGINA -->
-<footer class="  text-white  mt-5 p-4 " footer>
+<footer class="  text-white  mt-5 p-4 " bg-page>
 	<div class="container d-flex flex-wrap justify-content-between">
   
 		<div class="w-30" >
@@ -192,6 +192,7 @@
 		</div>
 	
   </footer>
+  
 	
 	
 
