Eliminando curso del index

--- a/unete.html
+++ b/unete.html
@@ -42,7 +42,7 @@
       <div class="unete">
            <h1>TRABAJA CON NOSOTROS</h1>
             <hr class="subra">
-            <p class="mt-5 mb-5">No dejas pasar esta oportunidad y forma parte de nuestra plana docente en Intesla</p>
+            <span class="mt-5 mb-5">No dejes pasar esta oportunidad y forma parte de nuestra plana docente en Intesla</span>
 
                  <!-- Formulario-->
                         <div class="unete-contenedor">
@@ -61,12 +61,12 @@
                                 <input type="email" id="email" name="correo" class="form-control" placeholder="Correo electrónico">
                                 <p class="text-danger"></p>
 
-                                <label for="phone">Celular</label>
+                                <label for="phone">Teléfono/Celular</label>
                                 <input type="phone" id="phone" name="celular" class="form-control" placeholder="Numero de celular" >
                                 <p class="text-danger"></p>
 
                                 <label for="link">Link</label> 
-                                <input type="url" id="link" name="correo" class="form-control" placeholder="Pega aquí el link de tu video">
+                                <input type="url" id="link" name="correo" class="form-control" placeholder="URL del video">
                                 <p class="text-danger"></p>
 
                                 <label for="mensaje">Mensaje</label>
