--- a/blog.html
+++ b/blog.html
@@ -13,7 +13,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
-
+	<link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200&family=Fjalla+One&family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 </head>
 <body >
 	 <!-- CABECERA -->
@@ -114,15 +115,15 @@
 		<p class="h4">REDES SOCIALES</p>
 		<div class="">
 		  <i class="fa fa-facebook-square" aria-hidden="true"></i>
-		  <a href="https://www.facebook.com/InteslaPeru/" class="text-white">/Intesla</a>
+		  <a href="https://www.facebook.com/InteslaPeru/" class="text-white" target="_blank">/Intesla</a>
 		</div>
 		<div class="">
 		  <i class="fa fa-instagram" aria-hidden="true"></i>
-		  <a href="https://www.instagram.com/InteslaPeru/" class="text-white">/Intesla</a>
+		  <a href="https://www.instagram.com/InteslaPeru/" class="text-white" target="_blank">/Intesla</a>
 		</div>
 		<div class="">
 		  <i class="fa fa-youtube-play" aria-hidden="true"></i>
-		  <a href="https://www.youtube.com/channel/UCd1GajcYG9WTmyHbHw-7Wqw" class="text-white">/Intesla</a>
+		  <a href="https://www.youtube.com/channel/UCd1GajcYG9WTmyHbHw-7Wqw" class="text-white" target="_blank">/Intesla</a>
 		</div>
 		 </div> 
   
