--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200&family=Fjalla+One&family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 <body>
   <!-- CABECERA -->
+  <nav>
+    
+  </nav>
   <div class="cabecera1"> 
     <nav class="navbar navbar-expand-md navbar-light " nav1>
         <div class="container">
@@ -41,12 +44,14 @@
 <!-- VIDEO -->
 <section>
     <article>
-      <div class="titulo-video">
-        <p class="titulo-intesla">Pasión por la Ingeniería</p>
-       </div>
-      <video class="video"  poster="img/img1.jpg" loop autoplay>
-        <source src="img/video.mp4" type="video/mp4" >
+      <div class="contenedor-video">   
+          <div class="titulo-video">
+            <p class="titulo-intesla">Pasión por la Ingenieria</p>
+          </div>
+          <video class="video"  poster="img/img1.jpg" loop autoplay>
+            <source src="img/video.mp4" type="video/mp4" >
        </video>
+      </div>
     </article>
    <!-- #1 QUIENES SOMOS -->
 
@@ -309,9 +314,10 @@
 </section>
 
 <!-- PIE DE PAGINA -->
+
+
 <footer class="  text-white  mt-5 p-4 " bg-page>
   <div class="container d-flex flex-wrap justify-content-between">
-
       <div class="w-30" >
       <img src="img/logo.png" alt="logo" class="logi w-50">
        
