--- a/servicios.html
+++ b/servicios.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEh4Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/all.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.13.0/css/v4-shims.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@200&family=Fjalla+One&family=Open+Sans:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- CABECERA -->
@@ -29,8 +31,9 @@
                        <li class="nav-item"><a class="nav-link text-white"href="servicios.html" atribute>SERVICIOS </a></li>
                        <li class="nav-item"><a class="nav-link text-white"href="blog.html" atribute>BLOG</a></li>
                        <li class="nav-item"><a class="nav-link text-white"href="contactanos.html" atribute>CONTÁCTANOS</a></li>
-                       <li class="nav-item"><a class="nav-link text-white"href="cursos.html" atribute>CURSOS </a></li>
                        <li class="nav-item"><a class="nav-link text-white"href="unete.html" atribute>ÚNETE</a></li>
+                       <li class="nav-item"><a class="nav-link text-white"href="cursos.html" atribute>CURSOS </a></li>
+                      
                    </ul>
                  </div>
              </div>
